--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,13 +38,14 @@ set(imgui_public_headers
 set(imgui_private_headers
   imgui/imgui_internal.h
   imgui/imconfig.h
-  imgui/stb_rect_pack.h
-  imgui/stb_textedit.h
-  imgui/stb_truetype.h
+  imgui/imstb_rectpack.h
+  imgui/imstb_textedit.h
+  imgui/imstb_truetype.h
   )
 
 set(imgui_sources
   imgui/imgui.cpp
+  imgui/imgui_widgets.cpp
   imgui/imgui_draw.cpp
   imgui/imgui_demo.cpp
   ${imgui_public_headers}
