rename gl.c to gl.cpp to use the C++ compiler instead of the C compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,7 @@ set(private_headers
   )
 
 set(sources
-  src/glad/gl.c
+  src/glad/gl.cpp
   src/glfw/imgui_impl_glfw.cpp
   src/glfw/imgui_impl_opengl3.cpp
   ${imgui_public_headers}
